# godot_native

./: .gitignore  SConstruct  build_all.py  cnf.json  cnf_home.json
create_cube/: cube_def.hpp  init.cpp
first/: main.cpp
godot-cpp/: build_all.bat
src/: CMakeLists.txt  init.cpp
